--- a/_sass/homepage.scss
+++ b/_sass/homepage.scss
@@ -555,3 +555,11 @@
 .soundbox .padded-right {
     padding-right: 1em;
 }
+
+.contrib-name {
+    color: $terracotta;
+}
+
+figure.inline-images img {
+    display: inline;
+}
